Fixed map alignment problem

--- a/html/css/map.css
+++ b/html/css/map.css
@@ -336,7 +336,7 @@ a,img{border:0;text-decoration:none;}
     animation-iteration-count: infinite;
     background: 0 0;
 }
-.school .show-regin span{left:-35px; top:2px;}
+.school .show-regin span{left:-24px; top:0px;}
 .postition-20{left:958px;top:180px;}
 .postition-21{left:900px;top:175px;}
 .postition-22{left:780px;top:102px;}
